--- a/Sheaft.Web.Portal/src/components/Buttons/button.scss
+++ b/Sheaft.Web.Portal/src/components/Buttons/button.scss
@@ -1,5 +1,5 @@
 ﻿button {
-  @apply flex items-center justify-center px-7 py-3 text-white font-medium text-sm leading-snug uppercase rounded-full shadow-md hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out;  
+  @apply flex items-center justify-center px-7 py-3 text-white font-medium text-sm leading-snug uppercase rounded-full shadow-md hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out  disabled:bg-gray-400 text-gray-200  text-white;  
 }
 
 button.primary{
@@ -10,3 +10,6 @@ button.accent{
   @apply bg-accent-600 hover:bg-accent-700 focus:bg-accent-700 active:bg-accent-700 disabled:bg-gray-400 disabled:text-gray-200;
 }
 
+button.back{
+  @apply bg-gray-600 hover:bg-gray-700 focus:bg-gray-700 active:bg-gray-700 disabled:bg-gray-400 disabled:text-gray-200;
+}
