--- a/Sheaft.Web.Portal/src/styles/global.scss
+++ b/Sheaft.Web.Portal/src/styles/global.scss
@@ -7,19 +7,19 @@ html > *{
 }
 
 h1, h2, h3{
-  @apply font-bold  text-gray-600;
+  @apply font-bold text-gray-600;
 }
 
 h1{
-  @apply text-2xl my-8;
+  @apply text-2xl;
 }
 
 h2{
-  @apply text-xl my-6;
+  @apply text-xl;
 }
 
 h3{
-  @apply text-xl my-4;
+  @apply text-xl;
 }
 
 a {
