--- a/Sheaft.Web.Portal/src/styles/global.scss
+++ b/Sheaft.Web.Portal/src/styles/global.scss
@@ -30,7 +30,7 @@ table{
   @apply w-full text-sm text-left text-gray-500;
   
   thead{
-    @apply text-xs text-gray-700 uppercase bg-gray-100;
+    @apply text-xs text-gray-700 uppercase bg-gray-200;
     
     tr > th {
       @apply px-6 py-3
@@ -41,7 +41,7 @@ table{
     @apply bg-white border-b hover:bg-gray-50;
     
     tr{
-      @apply cursor-pointer;
+      @apply cursor-pointer hover:bg-gray-100;
     }
     
     th{
