Fin implémentation agreement

--- a/Sheaft.Web.Portal/src/styles/global.scss
+++ b/Sheaft.Web.Portal/src/styles/global.scss
@@ -54,6 +54,10 @@ table{
   }
 }
 
+form{
+  @apply max-w-xl;
+}
+
 input[aria-invalid=true], select[aria-invalid=true]{
   @apply border-danger-500
 }
