--- a/Sheaft.Web.Portal/src/styles/tables.scss
+++ b/Sheaft.Web.Portal/src/styles/tables.scss
@@ -1,5 +1,5 @@
 ﻿table{
-  @apply border-collapse rounded-xl overflow-hidden;
+  @apply border-collapse rounded-xl;
   @apply w-full text-sm text-left text-gray-500;
     
   thead{
